# car_detection_repo

./: .coverage  .gitignore  .ruff.toml  Makefile  README.md  main.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: continuous_integration.yaml  lint.yml
adapters/: ultralytics_detector.py  ultralytics_rtdetr_detector.py
config/: settings.py  thresholds.yaml
domain/: detection.py  detection_service.py
ports/: base.py
scripts/: setup_dev.py
src/: main.py
src/adapters/: repository_interface.py  yolo_detection.py
src/domain/: filter_car_detections.py
src/infra/: car_count_repository.py
src/ports/: object_detection_port.py
tests/: conftest.py  test_adapters.py  test_domain.py  test_main.py  test_thresholds.py  test_ultralytics_detector.py  test_validation.py
